# course-scraper

./: Course Collation Processor.ipynb  Course Indexer.ipynb  README.md  Single Semester Schedule Scraper.ipynb  Single Year Catalog Scraper.ipynb  collated.csv  collated_min.json  index.html  index.json  script.js  style.css
catalog/: 2003-2004.csv  2004-2005.csv  2008-2009.csv  2010-2011.csv  2011-2012.csv  2016-2017.csv  2017-2018.csv  2018-2019.csv  2022-2023.csv  2023-2024.csv
explorer/: index.html  script.js  style.css
explorer/json-search/: Cargo.toml
explorer/json-search/pkg/: json_search_bg.wasm.d.ts  package.json
explorer/json-search/src/: lib.rs
history/: index.html  script.js
pkg/: json_search.d.ts  json_search.js  json_search_bg.wasm
schedule/: Fall 2004.csv  Fall 2005.csv  Fall 2006.csv  Fall 2007.csv  Fall 2008.csv  Fall 2009.csv  Fall 2010.csv  Fall 2011.csv  Fall 2012.csv  Fall 2013.csv  Fall 2014.csv  Fall 2015.csv  Fall 2016.csv  Fall 2017.csv  Fall 2018.csv  Fall 2019.csv  Fall 2020.csv  Fall 2021.csv  Fall 2022.csv  Fall 2023.csv  Spring 2005.csv  Spring 2006.csv  Spring 2007.csv  Spring 2008.csv  Spring 2009.csv  Spring 2010.csv  Spring 2011.csv  Spring 2012.csv  Spring 2013.csv  Spring 2014.csv  Spring 2015.csv  Spring 2016.csv  Spring 2017.csv  Spring 2018.csv  Spring 2019.csv  Spring 2020.csv  Spring 2021.csv  Spring 2022.csv  Spring 2023.csv  Summer 2004.csv  (+19 more)
web-interface/: index.html  script.js  style.css
